--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -45,4 +49,5 @@ dependencies {
     kapt "com.github.moxy-community:moxy-compiler:2.0.2"
     implementation "com.github.moxy-community:moxy-ktx:2.0.2"
     implementation "com.github.moxy-community:moxy-androidx:2.0.2"
+    implementation 'com.google.android.material:material:1.0.0'
 }
