--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    //MapKit
+    implementation 'com.yandex.android:mapkit:3.4.0'
+    implementation 'com.yandex.android:search:3.4.0'
 }
